lib_LTLIBRARIES = libtls.la
libtls_la_SOURCES = src/server/connection.cpp src/server/server.cpp src/server/error.cpp src/client/client.cpp src/client/error.cpp
include_HEADERS = src/tls.hpp src/server/connection.hpp src/server/server.hpp src/server/error.hpp src/client/client.hpp src/client/error.hpp 
